# yaaaf

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  TODO.txt  pyproject.toml  requirements.txt
data/: Archaeology - Wikipedia.html  london_archaeological_data.csv  london_archaeological_data.db
documentation/: README.md  nginx-config.md  requirements.txt
documentation/source/: agent_taxonomy.rst  agents.rst  api_reference.rst  architecture.rst  brave_search_agent.rst  conf.py  configuration.rst  core_concepts.rst  development.rst  examples.rst  frontend.rst  gdpr_popup.rst  getting_started.rst  index.rst  mcp_integration.rst  planning_system.rst
documentation/source/_static/: example_config.json
frontend/: .env.example  compile.sh  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
frontend/apps/www/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
scripts/planner_dataset/: README.md  generate_dataset.py  generate_websearch_dataset.py  planner_dataset.csv  requirements.txt
scripts/swe_bench/: README.md  convert_to_planner.py
scripts/swe_bench/code_edit_dataset/: README.md  generate_bad_bash_responses.py  generate_bad_responses.py  generate_unified_dataset.py  requirements.txt  train_dpo.py  train_sft.py
scripts/swe_bench/evaluation/: README.md  repo_manager.py  requirements.txt  run_evaluation.py  swe_bench_config.json  yaaaf_runner.py
scripts/swe_bench/planner_examples/: README.md
src/components/: client.py  data_types.py
src/components/agents/: base_agent.py  orchestrator_agent.py  prompts.py  rag_agent.py  reflection_agent.py  sql_agent.py  visualization_agent.py
tests/: mcp_stdio_server.py  server.py  test_answerer_agent.py  test_artefact_storage.py  test_brave_search_agent.py  test_certificate_paths.py  test_chunk_extractor.py  test_cli_conversations.py  test_clients.py  test_config_generator.py  test_document_retriever_agent.py  test_goal_extractor.py  test_mcp_connector.py  test_model_info.py  test_numerical_sequences_agent.py  test_ollama_client_training_cutoff.py  test_orchestrator_agent.py  test_orchestrator_builder.py  test_output_refiner.py  test_pause_resume.py  test_plan_driven_orchestrator.py  test_planner_agent.py  test_planner_agent_debug.py  test_planner_example_retrieval.py  test_rag_agent.py  test_reflection_agent.py  test_replanning_workflow.py  test_safety_filter.py  test_self_reflection_agent.py  test_sql_agent.py  test_status_extractor.py  test_status_tracking.py  test_thinking_artifacts.py  test_todo_agent.py  test_tool_agent.py  test_url_agent.py  test_user_input_agent.py  test_validation.py  test_visualization_agent.py  test_websearch_agent.py
yaaaf/: __init__.py  command_line.py  config_generator.py
yaaaf/client/: run.py
yaaaf/components/: client.py  decorators.py  exceptions.py  orchestrator_builder.py
yaaaf/data/: database.db  persistent_rag.pkl
yaaaf/feedback/: feedback_20250711_183650_qqn06u1neb.json
yaaaf/server/: accessories.py  config.py  default_config.json  routes.py  run.py
yaaf/: __main__.py  command_line.py  variables.py
yaaf/client/: run.py
yaaf/components/: client.py  data_types.py  orchestrator_builder.py
yaaf/connectors/: mcp_connector.py
yaaf/server/: __main__.py  accessories.py  config.py  default_config.json  routes.py  run.py  settings.py
(+476 files in other folders)
