[project]
name = "agents-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "mdpd>=0.2.1",
    "nltk>=3.9.1",
    "nodejs-wheel>=22.15.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pydantic-ai-slim[mcp]>=0.0.52",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "singleton-decorator>=1.0.0",
    "tabulate>=0.9.0",
]
