[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaaf"
version = "0.0.1"
description = "YAAF (Yet Another Agentic Framework) - A modular framework for building intelligent agentic applications with Python backend and Next.js frontend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "YAAF Contributors"},
]
maintainers = [
    {name = "YAAF Contributors"},
]
keywords = ["ai", "agents", "framework", "orchestrator", "chatbot", "sql", "visualization", "web-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "duckduckgo-search>=8.0.2",
    "fastapi>=0.115.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
    "tabulate>=0.8.0",
    "uvicorn>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
]
mcp = [
    "pydantic-ai>=0.2.0",
    "pydantic-ai-slim[mcp]>=0.0.50",
]
nlp = [
    "nltk>=3.6.0",
    "rank-bm25>=0.2.0",
]
all = [
    "yaaf[dev,mcp,nlp]"
]

[project.urls]
Homepage = "https://github.com/yaaf-framework/yaaf"
Documentation = "https://yaaf.readthedocs.io"
Repository = "https://github.com/yaaf-framework/yaaf.git"
Issues = "https://github.com/yaaf-framework/yaaf/issues"

[project.scripts]
yaaf = "yaaf.command_line:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yaaf*"]
exclude = ["tests*", "frontend*", "documentation*"]

[tool.setuptools.package-data]
yaaf = [
    "server/default_config.json",
    "components/agents/*.py",
    "components/data_types/*.py",
    "components/extractors/*.py",
    "components/sources/*.py",
    "components/retrievers/*.py",
    "connectors/*.py",
    "server/*.py",
    "client/*.py",
]
